# interactive-cap-demo

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend-py/: Dockerfile  main.py  pyproject.toml
apps/backend-ts/: Dockerfile  package.json
apps/backend-ts/src/: app.module.ts  main.ts  redis.provider.ts
apps/backend-ts/src/metrics/: metrics.controller.ts  metrics.middleware.ts  metrics.module.ts  metrics.service.ts
apps/backend-ts/src/position/: admin.controller.ts  partition.service.ts  position.controller.ts  position.entity.ts  position.gateway.ts  position.module.ts  position.service.ts
apps/frontend/: Dockerfile  nginx.conf  package.json
apps/frontend/apps/backend-ts/: package.json
apps/frontend/public/: diagrams
apps/frontend/src/: App.css  App.tsx  index.css
apps/frontend/src/components/: AboutPage.tsx  CAPControls.tsx  EventLog.tsx  InfoPane.tsx  PositionBox.tsx  RedisDot.tsx  ThemeToggle.tsx
apps/frontend/src/context/: EventLogContext.tsx  PartitionContext.tsx
apps/frontend/src/lib/: config.ts  hooks.ts  utils.ts
apps/frontend/src/types/: index.ts
k8s/: backend-py.yaml  backend-ts.yaml  frontend.yaml  grafana-dashboard.yaml  loki-datasource.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  redis.yaml
k8s/helm/: alloy-values.yaml  kube-prometheus-stack-values.yaml  loki-stack-values.yaml  loki-values.yaml
