[project]
name = "backend-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "pydantic-settings>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
